# llama.go

./: .cursorignore  .gitignore  .gitmodules  AGENTS.md  CMakePresets.json  README.md  go.mod  go.sum
.cursor/rules/: build-conventions.mdc  coding-style.mdc
.github/workflows/: ci.yml
api/: client.go  client_test.go  types.go
app/: app.go  cmds.go  run.go
app/embedding/: embedding.go
app/embedding/config/: config.go
app/pull/: pull.go
app/run/: config.go  interactive.go  run.go  utils.go
common/: file.go
common/auth/: auth.go
common/progress/: bar.go  progress.go
common/readline/: history.go
config/: config.go  modelpath.go  modelpath_test.go
core/: CMakeLists.txt
core/include/: core.h  embedding.h  interactive.h  process.h
core/src/: embedding.cpp  interactive.cpp  process.cpp  process_go_bridge_stub.cpp  runner.cpp  runner.h  scheduler.cpp  scheduler.h  server_context.h  singleton.h  utils.hpp  whisper-service.cpp  whisper-service.h  whisper_service.cpp
core/src/server/: server-context.cpp  server-context.h  server-http.h  server-models.cpp  server-models.h  server.cpp  server.h
core/tests/: CMakeLists.txt  test_embedding.cpp  test_runner.cpp  test_runner_chat.cpp  test_runner_gen.cpp
model/: huggingface.go  huggingface_examples.md  huggingface_test.go  model.go  name.go
model/fs/ggml/: ggml.go  ggml_test.go  gguf.go  gguf_test.go  type.go
model/fs/gguf/: gguf.go  keyvalue.go  lazy.go  tensor.go
model/harmony/: harmonyparser.go
model/parser/: parser.go
model/parsers/: parsers.go  qwen3coder.go  qwen3coder_test.go
model/template/: template.go  template_test.go
runner/: runner.go
server/: handlers.go  service.go
server/middleware/: cors.go  hosts.go
server/routes/: api.go  auth.go  download.go  handlers.go  images.go  index.go  layer.go  manifest.go  manifest_test.go  model.go  modelpath.go  modelpath_test.go  openai.go  sparse_common.go  sparse_windows.go  upload.go  utils.go
wrapper/: bridge.go  bridge_darwin.go  bridge_linux.go  bridge_linux_cuda.go  bridge_windows.go  common_params.go  flags_darwin.go  flags_linux.go  flags_linux_cuda.go  flags_windows.go
